src/main/java/EduScriptParser.java
// Generated from EduScript.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class EduScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAMA=1, FIMPROGRAMA=2, FUNCAO=3, PROCEDIMENTO=4, INICIO=5, FIM=6, 
		VAR=7, CONST=8, SE=9, ENTAO=10, SENAO=11, FIMSE=12, ENQUANTO=13, FACA=14, 
		FIMENQUANTO=15, PARA=16, ATE=17, PASSO=18, FIMPARA=19, LER=20, ESCREVER=21, 
		RETORNAR=22, REF=23, ARRAY=24, DE=25, REGISTRO=26, FIMREGISTRO=27, INTEIRO=28, 
		REAL=29, LOGICO=30, TEXTO=31, E=32, OU=33, NAO=34, IGUAL=35, DIFERENTE=36, 
		MENOR=37, MENORIGUAL=38, MAIOR=39, MAIORIGUAL=40, MAIS=41, MENOS=42, MULTIPLICACAO=43, 
		DIVISAO=44, RESTO=45, ASSIGN=46, LPAREN=47, RPAREN=48, LBRACKET=49, RBRACKET=50, 
		COMMA=51, SEMICOLON=52, COLON=53, NUMERO_INTEIRO=54, NUMERO_REAL=55, STRING=56, 
		BOOLEAN=57, ID=58, COMENTARIO_LINHA=59, COMENTARIO_BLOCO=60, WS=61;
	public static final int
		RULE_programa = 0, RULE_declaracoes = 1, RULE_funcao = 2, RULE_procedimento = 3, 
		RULE_parametros = 4, RULE_parametro = 5, RULE_declaracaoVar = 6, RULE_listaVar = 7, 
		RULE_declaracaoConst = 8, RULE_bloco = 9, RULE_comandos = 10, RULE_comando = 11, 
		RULE_atribuicao = 12, RULE_chamadaFuncao = 13, RULE_argumentos = 14, RULE_condicional = 15, 
		RULE_laco = 16, RULE_lacoEnquanto = 17, RULE_lacoPara = 18, RULE_entrada = 19, 
		RULE_saida = 20, RULE_listaExpressoes = 21, RULE_retorno = 22, RULE_expressao = 23, 
		RULE_expressaoLogica = 24, RULE_expressaoRelacional = 25, RULE_expressaoAritmetica = 26, 
		RULE_termo = 27, RULE_fator = 28, RULE_operadorLogico = 29, RULE_operadorRelacional = 30, 
		RULE_operadorAditivo = 31, RULE_operadorMultiplicativo = 32, RULE_operadorUnario = 33, 
		RULE_literal = 34, RULE_tipo = 35, RULE_tipoBasico = 36, RULE_tipoArray = 37, 
		RULE_tipoRegistro = 38, RULE_camposRegistro = 39;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracoes", "funcao", "procedimento", "parametros", "parametro", 
			"declaracaoVar", "listaVar", "declaracaoConst", "bloco", "comandos", 
			"comando", "atribuicao", "chamadaFuncao", "argumentos", "condicional", 
			"laco", "lacoEnquanto", "lacoPara", "entrada", "saida", "listaExpressoes", 
			"retorno", "expressao", "expressaoLogica", "expressaoRelacional", "expressaoAritmetica", 
			"termo", "fator", "operadorLogico", "operadorRelacional", "operadorAditivo", 
			"operadorMultiplicativo", "operadorUnario", "literal", "tipo", "tipoBasico", 
			"tipoArray", "tipoRegistro", "camposRegistro"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'programa'", "'fimprograma'", "'funcao'", "'procedimento'", "'inicio'", 
			"'fim'", "'var'", "'const'", "'se'", "'entao'", "'senao'", "'fimse'", 
			"'enquanto'", "'faca'", "'fimenquanto'", "'para'", "'ate'", "'passo'", 
			"'fimpara'", "'ler'", "'escrever'", "'retornar'", "'ref'", "'array'", 
			"'de'", "'registro'", "'fimregistro'", "'inteiro'", "'real'", "'logico'", 
			"'texto'", "'e'", "'ou'", "'nao'", null, "'<>'", "'<'", "'<='", "'>'", 
			"'>='", "'+'", "'-'", "'*'", "'/'", "'%'", null, "'('", "')'", "'['", 
			"']'", "','", "';'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAMA", "FIMPROGRAMA", "FUNCAO", "PROCEDIMENTO", "INICIO", 
			"FIM", "VAR", "CONST", "SE", "ENTAO", "SENAO", "FIMSE", "ENQUANTO", "FACA", 
			"FIMENQUANTO", "PARA", "ATE", "PASSO", "FIMPARA", "LER", "ESCREVER", 
			"RETORNAR", "REF", "ARRAY", "DE", "REGISTRO", "FIMREGISTRO", "INTEIRO", 
			"REAL", "LOGICO", "TEXTO", "E", "OU", "NAO", "IGUAL", "DIFERENTE", "MENOR", 
			"MENORIGUAL", "MAIOR", "MAIORIGUAL", "MAIS", "MENOS", "MULTIPLICACAO", 
			"DIVISAO", "RESTO", "ASSIGN", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
			"COMMA", "SEMICOLON", "COLON", "NUMERO_INTEIRO", "NUMERO_REAL", "STRING", 
			"BOOLEAN", "ID", "COMENTARIO_LINHA", "COMENTARIO_BLOCO", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "EduScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EduScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode PROGRAMA() { return getToken(EduScriptParser.PROGRAMA, 0); }
		public TerminalNode ID() { return getToken(EduScriptParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(EduScriptParser.SEMICOLON, 0); }
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public TerminalNode FIMPROGRAMA() { return getToken(EduScriptParser.FIMPROGRAMA, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(PROGRAMA);
			setState(81);
			match(ID);
			setState(82);
			match(SEMICOLON);
			setState(83);
			declaracoes();
			setState(84);
			bloco();
			setState(85);
			match(FIMPROGRAMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracoesContext extends ParserRuleContext {
		public List<FuncaoContext> funcao() {
			return getRuleContexts(FuncaoContext.class);
		}
		public FuncaoContext funcao(int i) {
			return getRuleContext(FuncaoContext.class,i);
		}
		public List<ProcedimentoContext> procedimento() {
			return getRuleContexts(ProcedimentoContext.class);
		}
		public ProcedimentoContext procedimento(int i) {
			return getRuleContext(ProcedimentoContext.class,i);
		}
		public List<DeclaracaoVarContext> declaracaoVar() {
			return getRuleContexts(DeclaracaoVarContext.class);
		}
		public DeclaracaoVarContext declaracaoVar(int i) {
			return getRuleContext(DeclaracaoVarContext.class,i);
		}
		public List<DeclaracaoConstContext> declaracaoConst() {
			return getRuleContexts(DeclaracaoConstContext.class);
		}
		public DeclaracaoConstContext declaracaoConst(int i) {
			return getRuleContext(DeclaracaoConstContext.class,i);
		}
		public DeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).enterDeclaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).exitDeclaracoes(this);
		}
	}

	public final DeclaracoesContext declaracoes() throws RecognitionException {
		DeclaracoesContext _localctx = new DeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracoes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 408L) != 0)) {
				{
				setState(91);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case FUNCAO:
					{
					setState(87);
					funcao();
					}
					break;
				case PROCEDIMENTO:
					{
					setState(88);
					procedimento();
					}
					break;
				case VAR:
					{
					setState(89);
					declaracaoVar();
					}
					break;
				case CONST:
					{
					setState(90);
					declaracaoConst();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncaoContext extends ParserRuleContext {
		public TerminalNode FUNCAO() { return getToken(EduScriptParser.FUNCAO, 0); }
		public TerminalNode ID() { return getToken(EduScriptParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(EduScriptParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(EduScriptParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(EduScriptParser.COLON, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode INICIO() { return getToken(EduScriptParser.INICIO, 0); }
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public TerminalNode FIM() { return getToken(EduScriptParser.FIM, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public FuncaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).enterFuncao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).exitFuncao(this);
		}
	}

	public final FuncaoContext funcao() throws RecognitionException {
		FuncaoContext _localctx = new FuncaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funcao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(FUNCAO);
			setState(97);
			match(ID);
			setState(98);
			match(LPAREN);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==REF || _la==ID) {
				{
				setState(99);
				parametros();
				}
			}

			setState(102);
			match(RPAREN);
			setState(103);
			match(COLON);
			setState(104);
			tipo();
			setState(105);
			match(INICIO);
			setState(106);
			comandos();
			setState(107);
			match(FIM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcedimentoContext extends ParserRuleContext {
		public TerminalNode PROCEDIMENTO() { return getToken(EduScriptParser.PROCEDIMENTO, 0); }
		public TerminalNode ID() { return getToken(EduScriptParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(EduScriptParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(EduScriptParser.RPAREN, 0); }
		public TerminalNode INICIO() { return getToken(EduScriptParser.INICIO, 0); }
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public TerminalNode FIM() { return getToken(EduScriptParser.FIM, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public ProcedimentoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedimento; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).enterProcedimento(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).exitProcedimento(this);
		}
	}

	public final ProcedimentoContext procedimento() throws RecognitionException {
		ProcedimentoContext _localctx = new ProcedimentoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_procedimento);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(PROCEDIMENTO);
			setState(110);
			match(ID);
			setState(111);
			match(LPAREN);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==REF || _la==ID) {
				{
				setState(112);
				parametros();
				}
			}

			setState(115);
			match(RPAREN);
			setState(116);
			match(INICIO);
			setState(117);
			comandos();
			setState(118);
			match(FIM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametrosContext extends ParserRuleContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(EduScriptParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(EduScriptParser.COMMA, i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).enterParametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).exitParametros(this);
		}
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			parametro();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(121);
				match(COMMA);
				setState(122);
				parametro();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametroContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(EduScriptParser.ID, 0); }
		public TerminalNode COLON() { return getToken(EduScriptParser.COLON, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode REF() { return getToken(EduScriptParser.REF, 0); }
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).enterParametro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).exitParametro(this);
		}
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parametro);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==REF) {
				{
				setState(128);
				match(REF);
				}
			}

			setState(131);
			match(ID);
			setState(132);
			match(COLON);
			setState(133);
			tipo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoVarContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(EduScriptParser.VAR, 0); }
		public ListaVarContext listaVar() {
			return getRuleContext(ListaVarContext.class,0);
		}
		public TerminalNode COLON() { return getToken(EduScriptParser.COLON, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(EduScriptParser.SEMICOLON, 0); }
		public DeclaracaoVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).enterDeclaracaoVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).exitDeclaracaoVar(this);
		}
	}

	public final DeclaracaoVarContext declaracaoVar() throws RecognitionException {
		DeclaracaoVarContext _localctx = new DeclaracaoVarContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaracaoVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(VAR);
			setState(136);
			listaVar();
			setState(137);
			match(COLON);
			setState(138);
			tipo();
			setState(139);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaVarContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(EduScriptParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(EduScriptParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(EduScriptParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(EduScriptParser.COMMA, i);
		}
		public ListaVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).enterListaVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).exitListaVar(this);
		}
	}

	public final ListaVarContext listaVar() throws RecognitionException {
		ListaVarContext _localctx = new ListaVarContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_listaVar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(ID);
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(142);
				match(COMMA);
				setState(143);
				match(ID);
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoConstContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(EduScriptParser.CONST, 0); }
		public TerminalNode ID() { return getToken(EduScriptParser.ID, 0); }
		public TerminalNode COLON() { return getToken(EduScriptParser.COLON, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(EduScriptParser.ASSIGN, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(EduScriptParser.SEMICOLON, 0); }
		public DeclaracaoConstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoConst; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).enterDeclaracaoConst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).exitDeclaracaoConst(this);
		}
	}

	public final DeclaracaoConstContext declaracaoConst() throws RecognitionException {
		DeclaracaoConstContext _localctx = new DeclaracaoConstContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declaracaoConst);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(CONST);
			setState(150);
			match(ID);
			setState(151);
			match(COLON);
			setState(152);
			tipo();
			setState(153);
			match(ASSIGN);
			setState(154);
			expressao();
			setState(155);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlocoContext extends ParserRuleContext {
		public TerminalNode INICIO() { return getToken(EduScriptParser.INICIO, 0); }
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).enterBloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).exitBloco(this);
		}
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_bloco);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(INICIO);
			setState(158);
			comandos();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandosContext extends ParserRuleContext {
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public ComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).enterComandos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EduScriptListener ) ((EduScriptListener)listener).exitComandos(this);
		}
	}
